--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,26 @@
 
                          JGoodies Looks
+                          Version 2.0.2 Snapshot
+                          Release Notes
+                        
+
+INTRODUCTION
+
+    This maintenance release ...
+
+    
+BUGS FIXED
+
+    #122: Regression: Missing popup menu drop shadows.
+
+
+---------------------------------------------------------------------------
+
+Find below the change history for older releases.
+
+
+
+                         JGoodies Looks
                           Version 2.0.1
                           Release Notes
                         
