--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -6,13 +6,14 @@
 
 INTRODUCTION
 
-    This maintenance release fixes a regression and improves 
+    This maintenance release fixes a regression, a bug, and improves 
     the password field appearance in non-Windows environments.
 
     
 BUGS FIXED
 
     #122: Regression: Missing popup menu drop shadows.
+    #123: Windows popup menu may lack the selection background.
 
 
 OTHER CHANGES
@@ -23,6 +24,8 @@ OTHER CHANGES
       UIManager's echo character, share the password view,
       and this patch is used in Java 1.4 and Java 5 only.
     o The Looks Demo shows non-editable and disabled spinners.
+    o Improved the selection background of non-editable
+      Windows combo boxes that use a custom renderer.
 
 ---------------------------------------------------------------------------
 
