--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,30 @@
 
                          JGoodies Looks
+                          Version 2.0.3 Snapshot
+                          Release Notes
+                        
+
+INTRODUCTION
+
+    This maintenance release fixes a regression, and brings a new 
+    Plastic theme "Experience Royale" for use with XP's Royale theme.
+
+    
+BUGS FIXED
+
+    #1xx: Windows XP table header border is wrong. 
+
+
+OTHER CHANGES
+
+    o ...
+
+---------------------------------------------------------------------------
+
+Find below the change history for older releases.
+
+
+                         JGoodies Looks
                           Version 2.0.2
                           Release Notes
                         
