--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -47,7 +47,10 @@ OTHER CHANGES
 
     #040: Consider improving instance reuse.
     #093: Consider making PlasticXP spinner buttons round.
+    #132: PlasticXP checkbox/radio button without text doesn't paint focus.
     #133: Consider making PlasticXP toolbar button rollover border round.
+    
+    o Plastic uses Tango icons, see www.tango-project.org.
     
     
 ---------------------------------------------------------------------------
